[package]
name = "flpc"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "flpc"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
regex = "1.10.5"
lazy_static = "1.5.0"
unicode-segmentation = "1.11.0"