[project]
name = "flpc"
version = "0.1.2"
description = "A Rust-based regex port for Python3 to faster performance. 👾"
maintainers = [{ name = "Adarsh Gourab Mahalik", email = "gourabmahalikadarsh@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
   "Programming Language :: Rust",
   "Programming Language :: Python :: Implementation :: CPython",
   "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/itsmeadarsh2008/flpc"
Repository = "https://github.com/itsmeadarsh2008/flpc.git"
"Bug Tracker" = "https://github.com/itsmeadarsh2008/flpc/issues"

[tool.maturin]
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"